# SAPAL

./: .gitignore  Reporte de costo en la toma de decisiones.md  app.db  app.db-shm  app.db-wal  docker-compose.yml  main.py  next.config.mjs  pyproject.toml  run_dev.sh  salarios_sapal.ipynb  salarios_sapal.py  script.sh
DATA/: sapal_salarios.csv  sapal_salarios_clean.csv
REPORTES_ANALISIS/: salarios_sapal.ipynb  salarios_sapal.py
REPORTES_ANALISIS/DATA/: sapal_salarios.xlsx
app/: db.py  layout.tsx  main.py  models.py  page.tsx  schemas.py
app/routers/: README.md  items.py  sim.py
app/services/: README.md  items.py  sim.py
backend/: Dockerfile  README.md  app.db  app.db-shm  db.py  main.py  schemas.py
backend/routers/: sim.py
backend/services/: sim.py
components/: alerts-panel.tsx  assistant-button.tsx  dashboard-header.tsx  sector-grid.tsx  sparkline.tsx
components/ui/: animated-card.tsx  calendar.tsx  command.tsx
frontend/: Dockerfile  next.config.mjs  pnpm-lock.yaml
frontend/.next/dev/: _events.json  prerender-manifest.json  trace
frontend/app/: globals.css
frontend/components/: alerts-panel.tsx  assistant-button.tsx  sector-detail.tsx  sector-grid.tsx
frontend/components/ui/: animated-card.tsx  navigation-menu.tsx
frontend/dev/: prerender-manifest.json  routes-manifest.json  trace
frontend/dev/cache/: .rscinfo  config.json
frontend/dev/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/dev/types/: routes.d.ts
frontend/hooks/: use-poll.ts
hooks/: use-poll.ts  use-sse.ts
lib/: api.ts
(+160 files in other folders)
