[project]
name = "sapal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.120.4",
    "fastexcel>=0.16.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
